# pload

./: README.md  install.sh  pyproject.toml  setup.py
bash/: complete.sh  vload
bash/src/: new.sh
pload/: cli.py  cmds.py
script/: init_shell.py  pload.fish  pload.ps1  pload.sh  pload.zsh
src/: cli.py  cmds.py
src/pload/: cli.py  cmds.py
src/pload/managers/: dependency.py  platform.py
zsh/: complete.zsh  vload_zsh
zsh/src/: help.sh  init.sh  new.sh
